fix inspection warnings